public class Repositorio {
    Directorio[] branch;

    public Repositorio(){

    }

    public void addNewBranch(Directorio branch){
        Directorio d=new Directorio(branch);


    }
}
